# Interpolation

./: CMakeLists.txt  README.md  interpolation_method.cpp  interpolation_method.h  main.cpp  newton_interpolation.cpp  newton_interpolation.h  resources.h  spline_interpolation.cpp  spline_interpolation.h
